syntax = "proto3";

option go_package = "github.com/elrodrigues/ninshud/jutsu";

package jutsu;

// Interface for daemon
service Cluster {
    // Pings a node
    rpc PingNode (HelloRequest) returns (HelloReply) {}
    rpc DropAnchor (ConnectRequest) returns (NinshuReply) {} // replace with anchor type
    rpc RaiseAnchor (EmptyRequest) returns (NinshuReply) {}
    rpc ConnectTo (ConnectRequest) returns (NinshuReply) {}
}

message EmptyRequest {}

message NinshuReply {
    bool success = 1;
    optional string reply = 2;
}

message HelloRequest {
    string ping = 1;
}

message HelloReply {
    string pong = 1;
}

message ConnectRequest {
    string hostIP = 1;
    string ip = 2;
}